Index page & 2nd page - catalog
Plain HTML of index page and empty created catalog page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,114 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header class="site-header">
+      <div class="up-container">
+        <div class="logo">
+          <a class="nerds-logo" href="#">Nerds</a>
+        </div>
+        <nav class="site-navigation">
+          <ul>
+            <li>
+              <a href="#">Студия</a>
+            </li>
+            <li>
+              <a href="#">Клиенты</a>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="user-basket">
+          <a class="basket" href="#">Корзина</a>
+        </div>
+      </div>
+      <div class="down-container">
+        <ul class="slider">
+          <li class="slider-1">
+            <div class="slider-1-content">
+              <b class="slider-content-title">Долго, дорого, скрупулезно</b>
+              <p>Математический выверенный дизайн для вашего сайта или
+                мобильного приложения.</p>
+              <a class="btn" href="#">Узнайти больше</a>
+            </div>
+          </li>
+          <li class="slider-2">Второй слайд</li>
+          <li class="slider-3">Третий слайд</li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <section class="features">
+        <div class="features-item">
+          <div class="featerues-web">
+           <img src="http://placehold.it/150x100" alt="WEB">
+           <h2 class="features-name">Веб-сайты</h2>
+           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a class="btn" href="#">Заказать</a>
+          </div>
+          <div class="features-app">
+           <img src="http://placehold.it/150x100" alt="APP">
+           <h2 class="features-name">Пpиложения</h2>
+           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+           <a class="btn" href="#">Заказать</a>
+         </div>
+         <div class="features-presentation">
+          <img src="http://placehold.it/150x100" alt="PRE">
+          <h2 class="features-name">Презентаций</h2>
+          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <a class="btn" href="#">Заказать</a>
+        </div>
+       </div>
+      </section>
+      <div class="index-content">
+        <div class="index-content-left">
+          <p class="content-title"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара</b></p>
+          <p>Исповедуем принципы креатива. Работаем не покладая рук, как роботы.</p>
+          <p>Выполняем заказы на разработку</p>
+          <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильные приложения для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </div>
+        <div class="index-content-right">
+          <p><b class="content-title">С 2004 года любим точность во всем:</b></p>
+          <ul>
+            <li><b>146<sup>%</sup></b>Уровень самоотдачи</li>
+            <li><b>100<sup>%</sup></b>Соблюдение сроков</li>
+            <li><b>50<sup>%</sup></b>Минимальная предоплата</li>
+          </ul>
+        </div>
+      </div>
+      <div class="index-content">
+        <div class="map-content">
+          <div class="index-content-left">
+            <h2 class="index-content-title">Nerds Design Studio</h2>
+            <p>191186, Краснодар,<br>
+               ул.Б. Конюшенная, д.19/8
+            </p>
+            <p>тел. +7(812)275-75-75</p>
+          </div>
+          <img src="#" width="1440" height="420" alt="map">
+        </div>
+      </div>
+    </main>
+    <footer class="site-footer">
+      <div class="container">
+        <section class="footer-social">
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </section>
+        <section class="footer-promo">
+          <p><b>Давайте дружить</b></p>
+          <p>Скидка 10% для друзей из социальных сетей</p>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
