Index Page (with Catalog Page link) and Plain HTML of Catalog Page
Карту убрал в футер и голый HTML для страницы каталога

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <body>
     <header class="site-header">
       <div class="up-container">
-        <div class="logo">
-          <a class="nerds-logo" href="#">Nerds</a>
-        </div>
         <nav class="site-navigation">
+          <a class="nerds-logo" href="#">
+            <img src="#" width="160" height="65" alt="Nerds Logo">
+          </a>
           <ul>
             <li>
               <a href="#">Студия</a>
@@ -19,7 +19,7 @@
               <a href="#">Клиенты</a>
             </li>
             <li>
-              <a href="#">Магазин</a>
+              <a href="catalog.html">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -88,7 +88,9 @@
           </ul>
         </div>
       </div>
-      <div class="index-content">
+    </main>
+    <footer class="site-footer">
+      <div class="map-address-footer">
         <div class="map-content">
           <div class="index-content-left">
             <h2 class="index-content-title">Nerds Design Studio</h2>
@@ -100,9 +102,7 @@
           <img src="#" width="1440" height="420" alt="map">
         </div>
       </div>
-    </main>
-    <footer class="site-footer">
-      <div class="container">
+      <div class="container-footer">
         <section class="footer-social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
