--- a/catalog.html
+++ b/catalog.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="site-header">
       <div class="header-navigation">
         <nav class="site-navigation">
           <a class="nerds-logo" href="#">
-            <img src="#" width="160" height="65" alt="Nerds Logo">
+            <img src="img/nerds-logo-png.png" width="160" height="65" alt="Nerds Logo">
           </a>
           <ul>
             <li>
@@ -99,6 +100,7 @@
         <div class="filter-items-list">
          <article class="item-1">
            <a href="#">
+             <img src="img/img-sedona-jpg.jpg">
             <h2 class="item-title">Sedona</h2>
             <span class="item-description">Информационный сайт для туристов</span>
             <div class="item-price">
@@ -107,6 +109,7 @@
          </article>
          <article class="item-2">
            <a href="#">
+             <img src="img/img-pink-jpg.jpg">
             <h2 class="item-title">Item 2</h2>
             <span class="item-description">Информационный сайт для туристов</span>
             <div class="item-price">
@@ -115,6 +118,7 @@
          </article>
          <article class="item-3">
            <a href="#">
+             <img src="img/img-barbershop-jpg.jpg">
             <h2 class="item-title">Item 3</h2>
             <span class="item-description">Информационный сайт для туристов</span>
             <div class="item-price">
@@ -123,6 +127,7 @@
          </article>
          <article class="item-4">
            <a href="#">
+             <img src="img/img-mishka-jpg.jpg">
             <h2 class="item-title">Item 4</h2>
             <span class="item-description">Информационный сайт для туристов</span>
             <div class="item-price">
@@ -131,6 +136,7 @@
          </article>
          <article class="item-5">
            <a href="#">
+             <img src="img/img-aplus-jpg.jpg">
             <h2 class="item-title">Item 5</h2>
             <span class="item-description">Информационный сайт для туристов</span>
             <div class="item-price">
@@ -139,6 +145,7 @@
          </article>
          <article class="item-6">
            <a href="#">
+             <img src="img/img-kvast-jpg.jpg">
             <h2 class="item-title">Item 6</h2>
             <span class="item-description">Информационный сайт для туристов</span>
             <div class="item-price">
