--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="site-header">
-      <div class="header-navigation">
+      <div class="header-navigationf">
         <nav class="site-navigation">
           <a class="nerds-logo" href="#">
-            <img src="#" width="160" height="65" alt="Nerds Logo">
+            <img src="img/nerds-logo-png.png" width="160" height="65" alt="Nerds Logo">
           </a>
           <ul>
             <li>
@@ -27,6 +28,7 @@
           </ul>
         </nav>
         <div class="user-basket">
+          <img src="img/cart-icon-png.png" alt="basket">
           <a class="basket" href="#">Корзина</a>
         </div>
       </div>
@@ -35,29 +37,29 @@
         <div class="slider-slides">
           <div class="slider-1">
             <div class="slider-1-content">
-              <img src="#" width="1440" height="415" alt="phones">
               <b class="slider-content-title">Долго, дорого, скрупулезно</b>
               <p>Математический выверенный дизайн для вашего сайта или
                 мобильного приложения.</p>
               <a class="btn-slider-inner" href="#">Узнайти больше</a>
+              <img src="img/slide1.png" alt="phones">
             </div>
           </div>
           <div class="slider-2">
             <div class="slider-2-content">
-              <img src="#" width="1440" height="415" alt="screens">
               <b class="slider-content-title">Любим математику как никто другой</b>
               <p>Никого креатива, только математические формулы для расчета
                 идеальных пропорций.</p>
               <a class="btn-slider-inner" href="#">Узнайти больше</a>
+              <img src="img/slide2.png" alt="screens">
             </div>
           </div>
           <div class="slider-3">
             <div class="slider-3-content">
-              <img src="#" width="1440" height="415" alt="tablets">
               <b class="slider-content-title">Только ночь, только хардкор</b>
               <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа
               только начинается</p>
               <a class="btn-slider-inner" href="#">Узнайти больше</a>
+              <img src="img/slide3.png" alt="tablets">
             </div>
           </div>
         </div>
@@ -67,20 +69,20 @@
       <section class="features">
         <div class="features-item">
           <div class="featerues-web">
-           <img src="http://placehold.it/150x100" alt="WEB">
-           <h2 class="features-name">Веб-сайты</h2>
+           <img src="img/illustration-1-jpg.png" alt="WEB">
+           <h1 class="features-name">Веб-сайты</h1>
            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a class="btn" href="#">Заказать</a>
           </div>
           <div class="features-app">
-           <img src="http://placehold.it/150x100" alt="APP">
-           <h2 class="features-name">Пpиложения</h2>
+           <img src="img/illustration-2-jpg.png" alt="APP">
+           <h1 class="features-name">Пpиложения</h1>
            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
            <a class="btn" href="#">Заказать</a>
          </div>
          <div class="features-presentation">
-          <img src="http://placehold.it/150x100" alt="PRE">
-          <h2 class="features-name">Презентаций</h2>
+          <img src="img/illustration-3-jpg.png" alt="PRE">
+          <h1 class="features-name">Презентаций</h1>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a class="btn" href="#">Заказать</a>
         </div>
@@ -98,6 +100,7 @@
           </ul>
         </div>
         <div class="index-content-right">
+          <img src="img/nerds-illustration-jpg.jpg" alt="logo-color">
           <p><b class="content-title">С 2004 года любим точность во всем:</b></p>
           <ul>
             <li><b>146<sup>%</sup></b>Уровень самоотдачи</li>
