--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="header-navigationf">
+      <div class="header-navigation">
         <nav class="site-navigation">
           <a class="nerds-logo" href="#">
             <img src="img/nerds-logo-png.png" width="160" height="65" alt="Nerds Logo">
@@ -28,78 +28,73 @@
           </ul>
         </nav>
         <div class="user-basket">
-          <img src="img/cart-icon-png.png" alt="basket">
+          <img src="#" alt="basket">
           <a class="basket" href="#">Корзина</a>
         </div>
       </div>
       <div class="slider-controls"></div>
       <div class="slider-inner">
         <div class="slider-slides">
-          <div class="slider-1">
-            <div class="slider-1-content">
+            <div class="slides slider-1-content">
               <b class="slider-content-title">Долго, дорого, скрупулезно</b>
               <p>Математический выверенный дизайн для вашего сайта или
                 мобильного приложения.</p>
               <a class="btn-slider-inner" href="#">Узнайти больше</a>
               <img src="img/slide1.png" alt="phones">
             </div>
-          </div>
-          <div class="slider-2">
-            <div class="slider-2-content">
+            <div class="slides slider-2-content">
               <b class="slider-content-title">Любим математику как никто другой</b>
               <p>Никого креатива, только математические формулы для расчета
                 идеальных пропорций.</p>
               <a class="btn-slider-inner" href="#">Узнайти больше</a>
               <img src="img/slide2.png" alt="screens">
             </div>
-          </div>
-          <div class="slider-3">
-            <div class="slider-3-content">
+            <div class=" slides slider-3-content">
               <b class="slider-content-title">Только ночь, только хардкор</b>
               <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа
               только начинается</p>
               <a class="btn-slider-inner" href="#">Узнайти больше</a>
               <img src="img/slide3.png" alt="tablets">
             </div>
-          </div>
         </div>
       </div>
     </header>
     <main>
       <section class="features">
-        <div class="features-item">
-          <div class="featerues-web">
-           <img src="img/illustration-1-jpg.png" alt="WEB">
-           <h1 class="features-name">Веб-сайты</h1>
-           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a class="btn" href="#">Заказать</a>
+        <div class="container">
+          <div class="feature-item">
+            <img src="img/illustration-1-jpg.png" alt="WEB">
+            <h3 class="feature-item-title">Веб-сайты</h3>
+            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <a class="btn btn-red" href="#">Заказать</a>
           </div>
-          <div class="features-app">
-           <img src="img/illustration-2-jpg.png" alt="APP">
-           <h1 class="features-name">Пpиложения</h1>
-           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-           <a class="btn" href="#">Заказать</a>
+          <div class="feature-item">
+            <img src="img/illustration-2-jpg.png" alt="APP">
+            <h3 class="feature-item-title">Пpиложения</h3>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+           <a class="btn btn-green" href="#">Заказать</a>
+          </div>
+          <div class="feature-item">
+            <img src="img/illustration-3-jpg.png" alt="PRE">
+            <h3 class="feature-item-title">Презентаций</h3>
+            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+            <a class="btn btn-yellow" href="#">Заказать</a>
          </div>
-         <div class="features-presentation">
-          <img src="img/illustration-3-jpg.png" alt="PRE">
-          <h1 class="features-name">Презентаций</h1>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a class="btn" href="#">Заказать</a>
         </div>
-       </div>
       </section>
       <div class="index-content">
-        <div class="index-content-left">
-          <p class="content-title"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара</b></p>
-          <p>Исповедуем принципы креатива. Работаем не покладая рук, как роботы.</p>
-          <p>Выполняем заказы на разработку</p>
-          <ul>
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильные приложения для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
-          </ul>
-        </div>
-        <div class="index-content-right">
+         <div class="container">
+           <div class="index-content-left">
+            <p class="content-title"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара</b></p>
+            <p>Исповедуем принципы креатива. Работаем не покладая рук, как роботы.</p>
+            <p>Выполняем заказы на разработку</p>
+            <ul>
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильные приложения для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </div>
+           <div class="index-content-right">
           <img src="img/nerds-illustration-jpg.jpg" alt="logo-color">
           <p><b class="content-title">С 2004 года любим точность во всем:</b></p>
           <ul>
@@ -108,6 +103,7 @@
             <li><b>50<sup>%</sup></b>Минимальная предоплата</li>
           </ul>
         </div>
+         </div>
       </div>
     </main>
     <footer class="site-footer">
@@ -123,7 +119,7 @@
           <img src="#" width="1440" height="420" alt="map">
         </div>
       </div>
-      <div class="container-footer">
+      <div class="social-footer">
         <section class="footer-social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
@@ -135,19 +131,19 @@
         </section>
       </div>
     </footer>
-    <div class="wrtie us">
-     <h2 class="write us-title">Напишите нам</h2>
-     <form class="message-form" action="#" method="post">
-      <label for "form-name">
-        Ваше имя:<input type="text" name="name" value="" placeholder="Представтесь, пожалуйста">
-      </label>
-      <label for "form-email">
-        Ваше email:<input type="text" name="email" value="" placeholder="Для отправки ответа">
-      </label>
-      <label for "form-text">
-        Текст письма:<input type="text" name="name" value="" placeholder="В свободной форме">
-      </label>
-      <button class="btn" type="submit">Отправить</button>
+    <div class="write-us">
+      <h1 class="write-us-title">Напишите нам</h1>
+      <form class="message-form" action="#" method="post">
+        <label for="form-name">
+          Ваше имя:<input type="text" name="name" value="" id="form-name" placeholder="Представтесь, пожалуйста">
+        </label>
+        <label for="form-email">
+          Ваше email:<input type="text" name="email" value="" id="form-email" placeholder="Для отправки ответа">
+       </label>
+       <label for="form-text">
+        Текст письма:<input type="text" name="name" value="" id="form-text" placeholder="В свободной форме">
+       </label>
+       <button class="btn" type="submit">Отправить</button>
      </form>
    </div>
   </body>
