--- a/catalog.html
+++ b/catalog.html
@@ -8,34 +8,36 @@
   <body>
     <header class="site-header">
       <div class="header-navigation">
-        <nav class="site-navigation">
-          <a class="nerds-logo" href="#">
-            <img src="img/nerds-logo-png.png" width="160" height="65" alt="Nerds Logo">
-          </a>
-          <ul>
-            <li>
-              <a href="#">Студия</a>
-            </li>
-            <li>
-              <a href="#">Клиенты</a>
-            </li>
-            <li>
-              <a href="catalog.html">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="user-basket">
-          <a class="basket" href="#">Корзина</a>
+        <div class="container">
+          <nav class="site-navigation">
+            <a class="nerds-logo" href="#">
+              <img src="img/nerds-logo-png.png" width="160" height="65" alt="Nerds Logo">
+            </a>
+            <ul>
+              <li>
+                <a href="#">Студия</a>
+              </li>
+              <li>
+                <a href="#">Клиенты</a>
+              </li>
+              <li>
+                <a href="catalog.html">Магазин</a>
+              </li>
+              <li>
+                <a href="#">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="user-basket">
+            <a class="basket" href="#">Корзина</a>
+          </div>
         </div>
       </div>
       <div class="header-title">
-        <p><h1 class="container-title">Магазин готовых шаблонов</h1></p>
+        <h1 class="header-container-title">Магазин готовых шаблонов</h1>
       </div>
     </header>
-    <main class="main-content">
+    <main class="content main-content">
       <form class="control">
         <div class="control-price">
           <h2 class="control-title">Стоимость</h2>
@@ -52,13 +54,13 @@
           <h2 class="control-title">Сетка:</h2>
           <ul class="control-type-list">
             <li>
-               <input type="radio" name="adap">Адаптивная
+               <input type="radio" name="group-filters" id="adap"><label for="adap">Адаптивная</label>
             </li>
             <li>
-              <input type="radio" name="fixed">Фиксированная
+              <input type="radio" name="group-filters" id="fix"><label for="fix">Фиксированная</label>
             </li>
             <li>
-              <input type="radio" name="flex">Резиновая
+              <input type="radio" name="group-filters" id="flex"><label for="flex">Резиновая</label>
             </li>
           </ul>
         </div>
@@ -66,27 +68,27 @@
           <h2 class="control-title">Особенности:</h2>
           <ul class="control-features-list">
             <li>
-               <input type="checkbox" name="slider">Слайдер
+               <input type="checkbox" name="features-list" id="slider"><label for="slider">Слайдер</label>
             </li>
             <li>
-               <input type="checkbox" name="block-adv">Блок преимуществ
+               <input type="checkbox" name="features-list" id="advantages"><label for="advantages">Блок преимуществ</label>
             </li>
             <li>
-               <input type="checkbox" name="news">Новости
+               <input type="checkbox" name="features-list" id="news"><label for="news">Новости</label>
             </li>
             <li>
-               <input type="checkbox" name="gallery">Галерея
+               <input type="checkbox" name="features-list" id="gallery"><label for="gallery">Галерея</label>
             </li>
             <li>
-               <input type="checkbox" name="basket">Корзина
+               <input type="checkbox" name="features-list" id="basket"><label for="basket">Корзина</label>
             </li>
           </ul>
         </div>
-        <a class="btn" href="#">Показать</a>
+        <button class="btn" type="submit">Показать</button>
       </form>
-      <div class="filter-items">
-        <h2 class="filter-title">Сортировать</h2>
-        <ul class="filter-type">
+      <div class="catalog-wrapper">
+        <p class="catalog-wrapper-title">Сортировать</p>
+        <ul class="catalog-wrapper-types">
           <li>
             <a href="#">По цене</a>
           </li>
@@ -96,75 +98,75 @@
           <li>
             <a href="#">По названию</a>
           </li>
+          <li>
+            <div class="arrows-container">
+              <a class="arrow arrow-up" href="#">Вверх</a>
+              <a class="arrow arrow-down" href="#">Вниз</a>
+            </div>
+          </li>
         </ul>
-        <div class="filter-items-list">
-         <article class="item-1">
-           <a href="#">
-             <img src="img/img-sedona-jpg.jpg">
-            <h2 class="item-title">Sedona</h2>
-            <span class="item-description">Информационный сайт для туристов</span>
-            <div class="item-price">
+        <div class="catalog-items-list">
+         <article class="catalog-item">
+           <img src="img/img-sedona-jpg.jpg" alt="item">
+           <div class="catalog-item-info">
+             <h2 class="catalog-item-title">Sedona</h2>
+             <span class="catalog-item-description">Информационный сайт для туристов</span>
+             <a class="price-btn" href="#">9900 руб.</a>
+           </div>
+         </article>
+         <article class="catalog-item">
+            <img src="img/img-pink-jpg.jpg" alt="item">
+            <div class="catalog-item-info">
+              <h2 class="item-title">Item 2</h2>
+              <span class="item-description">Информационный сайт для туристов</span>
               <a class="price-btn" href="#">9900 руб.</a>
             </div>
          </article>
-         <article class="item-2">
-           <a href="#">
-             <img src="img/img-pink-jpg.jpg">
-            <h2 class="item-title">Item 2</h2>
-            <span class="item-description">Информационный сайт для туристов</span>
-            <div class="item-price">
+         <article class="catalog-item">
+            <img src="img/img-barbershop-jpg.jpg" alt="item">
+            <div class="catalog-item-info">
+              <h2 class="item-title">Item 3</h2>
+              <span class="item-description">Информационный сайт для туристов</span>
               <a class="price-btn" href="#">9900 руб.</a>
             </div>
          </article>
-         <article class="item-3">
-           <a href="#">
-             <img src="img/img-barbershop-jpg.jpg">
-            <h2 class="item-title">Item 3</h2>
-            <span class="item-description">Информационный сайт для туристов</span>
-            <div class="item-price">
+         <article class="catalog-item">
+            <img src="img/img-mishka-jpg.jpg" alt="item">
+            <div class="catalog-item-info">
+             <h2 class="item-title">Item 4</h2>
+             <span class="item-description">Информационный сайт для туристов</span>
+             <a class="price-btn" href="#">9900 руб.</a>
+            </div>
+         </article>
+         <article class="catalog-item">
+            <img src="img/img-aplus-jpg.jpg" alt="item">
+            <div class="catalog-item-info">
+              <h2 class="item-title">Item 5</h2>
+              <span class="item-description">Информационный сайт для туристов</span>
               <a class="price-btn" href="#">9900 руб.</a>
             </div>
          </article>
-         <article class="item-4">
-           <a href="#">
-             <img src="img/img-mishka-jpg.jpg">
-            <h2 class="item-title">Item 4</h2>
-            <span class="item-description">Информационный сайт для туристов</span>
-            <div class="item-price">
-              <a class="price-btn" href="#">9900 руб.</a>
-            </div>
-         </article>
-         <article class="item-5">
-           <a href="#">
-             <img src="img/img-aplus-jpg.jpg">
-            <h2 class="item-title">Item 5</h2>
-            <span class="item-description">Информационный сайт для туристов</span>
-            <div class="item-price">
-              <a class="price-btn" href="#">9900 руб.</a>
-            </div>
-         </article>
-         <article class="item-6">
-           <a href="#">
-             <img src="img/img-kvast-jpg.jpg">
-            <h2 class="item-title">Item 6</h2>
-            <span class="item-description">Информационный сайт для туристов</span>
-            <div class="item-price">
+         <article class="catalog-item">
+            <img src="img/img-kvast-jpg.jpg" alt="item">
+            <div class="catalog-item-info">
+              <h2 class="item-title">Item 6</h2>
+              <span class="item-description">Информационный сайт для туристов</span>
               <a class="price-btn" href="#">9900 руб.</a>
             </div>
          </article>
         </div>
         <ul class="items-pages">
           <li>
-            <button class="btn-items-1" type="button">1</button>
+            <a href="#" class="btn-items-1">1</a>
           </li>
           <li>
-            <button class="btn-items-2" type="button">2</button>
+            <a href="#" class="btn-items-2">2</a>
           </li>
           <li>
-            <button class="btn-items-3" type="button">3</button>
+            <a href="#" class="btn-items-3">3</a>
           </li>
           <li>
-            <button class="btn-items-next" type="button">Следующая</button>
+            <a href="#" class="btn-items-next">Следующая</a>
           </li>
         </ul>
       </div>
@@ -182,7 +184,7 @@
           <img src="#" width="1440" height="420" alt="map">
         </div>
       </div>
-      <div class="container-footer">
+      <div class="social-footer">
         <section class="footer-social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
@@ -194,19 +196,19 @@
         </section>
       </div>
     </footer>
-    <div class="wrtie us">
-     <h2 class="write us-title">Напишите нам</h2>
-     <form class="message-form" action="#" method="post">
-      <label for "form-name">
-        Ваше имя:<input type="text" name="name" value="" placeholder="Представтесь, пожалуйста">
-      </label>
-      <label for "form-email">
-        Ваше email:<input type="text" name="email" value="" placeholder="Для отправки ответа">
-      </label>
-      <label for "form-text">
-        Текст письма:<input type="text" name="name" value="" placeholder="В свободной форме">
-      </label>
-      <button class="btn" type="submit">Отправить</button>
+    <div class="write-us">
+      <h2 class="write-us-title">Напишите нам</h2>
+      <form class="message-form" action="#" method="post">
+        <label for="form-name">
+          Ваше имя:<input type="text" name="form" value="" id="form-name" placeholder="Представтесь, пожалуйста">
+        </label>
+        <label for="form-email">
+          Ваше email:<input type="text" name="form" value="" id="form-email" placeholder="Для отправки ответа">
+       </label>
+       <label for="form-text">
+        Текст письма:<input type="text" name="form" value="" id="form-text" placeholder="В свободной форме">
+       </label>
+       <button class="btn" type="submit">Отправить</button>
      </form>
    </div>
   </body>
