Arrows + Slider Wrapper + Spaces
Обернул сортировку в див, Обернул Слайдер в общий див, отступы вроде
исправил

--- a/catalog.html
+++ b/catalog.html
@@ -98,19 +98,23 @@
           <li>
             <a href="#">По названию</a>
           </li>
-          <li>
-            <div class="arrows-container">
-              <a class="arrow arrow-up" href="#">Вверх</a>
-              <a class="arrow arrow-down" href="#">Вниз</a>
-            </div>
-          </li>
+          <div class="arrow-container">
+            <ul class="arrow-container-types">
+              <li>
+                <a href="#">Вверх</a>
+              </li>
+              <li>
+                <a href="#">Вниз</a>
+              </li>
+            </ul>
+          </div>
         </ul>
         <div class="catalog-items-list">
          <article class="catalog-item">
            <img src="img/img-sedona-jpg.jpg" alt="item">
            <div class="catalog-item-info">
              <h2 class="catalog-item-title">Sedona</h2>
-             <span class="catalog-item-description">Информационный сайт для туристов</span>
+             <p class="catalog-item-description">Информационный сайт для туристов</p>
              <a class="price-btn" href="#">9900 руб.</a>
            </div>
          </article>
@@ -118,7 +122,7 @@
             <img src="img/img-pink-jpg.jpg" alt="item">
             <div class="catalog-item-info">
               <h2 class="item-title">Item 2</h2>
-              <span class="item-description">Информационный сайт для туристов</span>
+              <p class="item-description">Информационный сайт для туристов</p>
               <a class="price-btn" href="#">9900 руб.</a>
             </div>
          </article>
@@ -126,7 +130,7 @@
             <img src="img/img-barbershop-jpg.jpg" alt="item">
             <div class="catalog-item-info">
               <h2 class="item-title">Item 3</h2>
-              <span class="item-description">Информационный сайт для туристов</span>
+              <p class="item-description">Информационный сайт для туристов</p>
               <a class="price-btn" href="#">9900 руб.</a>
             </div>
          </article>
@@ -134,7 +138,7 @@
             <img src="img/img-mishka-jpg.jpg" alt="item">
             <div class="catalog-item-info">
              <h2 class="item-title">Item 4</h2>
-             <span class="item-description">Информационный сайт для туристов</span>
+             <p class="item-description">Информационный сайт для туристов</p>
              <a class="price-btn" href="#">9900 руб.</a>
             </div>
          </article>
@@ -142,7 +146,7 @@
             <img src="img/img-aplus-jpg.jpg" alt="item">
             <div class="catalog-item-info">
               <h2 class="item-title">Item 5</h2>
-              <span class="item-description">Информационный сайт для туристов</span>
+              <p class="item-description">Информационный сайт для туристов</p>
               <a class="price-btn" href="#">9900 руб.</a>
             </div>
          </article>
@@ -150,7 +154,7 @@
             <img src="img/img-kvast-jpg.jpg" alt="item">
             <div class="catalog-item-info">
               <h2 class="item-title">Item 6</h2>
-              <span class="item-description">Информационный сайт для туристов</span>
+              <p class="item-description">Информационный сайт для туристов</p>
               <a class="price-btn" href="#">9900 руб.</a>
             </div>
          </article>
