--- a/index.html
+++ b/index.html
@@ -28,34 +28,35 @@
           </ul>
         </nav>
         <div class="user-basket">
-          <img src="#" alt="basket">
           <a class="basket" href="#">Корзина</a>
         </div>
       </div>
-      <div class="slider-controls"></div>
-      <div class="slider-inner">
-        <div class="slider-slides">
-            <div class="slides slider-1-content">
-              <b class="slider-content-title">Долго, дорого, скрупулезно</b>
-              <p>Математический выверенный дизайн для вашего сайта или
-                мобильного приложения.</p>
-              <a class="btn-slider-inner" href="#">Узнайти больше</a>
-              <img src="img/slide1.png" alt="phones">
-            </div>
-            <div class="slides slider-2-content">
-              <b class="slider-content-title">Любим математику как никто другой</b>
-              <p>Никого креатива, только математические формулы для расчета
-                идеальных пропорций.</p>
-              <a class="btn-slider-inner" href="#">Узнайти больше</a>
-              <img src="img/slide2.png" alt="screens">
-            </div>
-            <div class=" slides slider-3-content">
-              <b class="slider-content-title">Только ночь, только хардкор</b>
-              <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа
-              только начинается</p>
-              <a class="btn-slider-inner" href="#">Узнайти больше</a>
-              <img src="img/slide3.png" alt="tablets">
-            </div>
+      <div class="header-sliders">
+        <div class="slider-controls"></div>
+        <div class="slider-inner">
+           <div class="slider-slides">
+              <div class="slides slider-1-content">
+                <b class="slider-content-title">Долго, дорого, скрупулезно</b>
+                <p>Математический выверенный дизайн для вашего сайта или
+                 мобильного приложения.</p>
+                <a class="btn-slider-inner" href="#">Узнайти больше</a>
+                <img src="img/slide1.png" alt="phones">
+              </div>
+              <div class="slides slider-2-content">
+                <b class="slider-content-title">Любим математику как никто другой</b>
+                <p>Никого креатива, только математические формулы для расчета
+                 идеальных пропорций.</p>
+                <a class="btn-slider-inner" href="#">Узнайти больше</a>
+                <img src="img/slide2.png" alt="screens">
+              </div>
+              <div class=" slides slider-3-content">
+                <b class="slider-content-title">Только ночь, только хардкор</b>
+                <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа
+                только начинается</p>
+                <a class="btn-slider-inner" href="#">Узнайти больше</a>
+                <img src="img/slide3.png" alt="tablets">
+              </div>
+          </div>
         </div>
       </div>
     </header>
@@ -72,7 +73,7 @@
             <img src="img/illustration-2-jpg.png" alt="APP">
             <h3 class="feature-item-title">Пpиложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-           <a class="btn btn-green" href="#">Заказать</a>
+            <a class="btn btn-green" href="#">Заказать</a>
           </div>
           <div class="feature-item">
             <img src="img/illustration-3-jpg.png" alt="PRE">
